syntax = "proto3";

option java_multiple_files = true;
option java_package = "gpb.analyticsservice";

service AnalyticsService {
  rpc CalculateGameValue (GameValueRequest) returns (GameValueResponse) {}
}

message GameValueRequest {
  int64 game_id = 1;
  string category = 2;
  int64 owner_id = 3;
}

message GameValueResponse {
  int64 game_id = 1;
  int32 value_score = 2;
  string verdict = 3;
  int64 owner_id = 4;
}